# cmake

./: CMakeLists.txt  CMakeListsOld.txt  main.cpp
app/: CMakeLists.txt  main.cpp
include/: hello.h
src/: CMakeLists.txt  hello.cpp
